# ohlcv-rag-system

./: .dockerignore  .dockerignore.optimized  .env.example  .gitignore  Dockerfile  Dockerfile.optimized  LICENSE  Makefile  QUICKSTART.md  README.md  README_ENCRYPTION.md  TEST_SETUP_SUMMARY.md  docker-build.sh  docker-compose.optimized.yml  docker-compose.override.yml  docker-compose.yml  main.py  main_oop.py  pyproject.toml  pytest.ini  requirements-integration.txt  requirements-test.txt  requirements.txt  run.sh  test_e2e_simple.py  test_encryption.py  test_real_functionality.py  test_simple_crypto.py
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile.multi-stage  docker-build.sh  docker-compose.dev.yml  docker-compose.optimized.yml  docker-compose.prod.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODING_STANDARDS.md  DATA_ADAPTERS.md  ENCRYPTION.md  GETTING_STARTED.md  INSTALLATION.md  QUICKSTART.md  RAG_PIPELINE.md  RAG_PIPELINE_VISUAL.md  README.md  TESTING.md  TESTING_STRATEGY.md  VECTOR_STORES.md
docs/architecture/: testing-strategy.md
docs/architecture/docker/: README.md  advanced-strategies.md  cicd-pipeline-strategy.md  monitoring-logging-strategy.md  orchestration-strategy.md  security-strategy.md  uv-build-strategy.md
docs/docker/: README.md  optimization-strategy.md
docs/guides/: DEPLOYMENT.md  DOCKER.md  GETTING_STARTED.md  INSTALLATION.md  OPTIMIZATION_GUIDE.md  README.md  TESTING.md  TESTING_WITH_COVERAGE.md  USAGE.md
scripts/: docker-build.sh  install-cpu-only.sh  install-optimized.sh  install-smart.sh  secure-env.sh  test-profiles.sh  test-quick.sh
scripts/encryption/: encrypt-api-keys.sh
scripts/setup/: run.sh  setup.sh
src/: __init__.py  application.py  application_integration_test.py  application_test.py  data_ingestion.py  data_ingestion_test.py  main_test.py  rag_pipeline.py  rag_pipeline_test.py  retriever.py  retriever_test.py  vector_store.py  vector_store_test.py
src/core/: __init__.py  base.py  base_processor_test.py  base_test.py  dependency_injection.py  exceptions.py  exceptions_test.py  interfaces.py  models.py
src/data_adapters/: __init__.py  alpha_vantage.py  base.py  csv_adapter.py  data_source_manager.py  indicators_test.py  polygon_io.py  yahoo_finance.py  yahoo_finance_test.py
src/ingestion/: __init__.py  data_ingestion.py
src/pipeline/: __init__.py  rag_pipeline.py  retriever.py  vector_store_adapter.py
src/utils/: crypto_utils.py  simple_crypto.py
src/vector_stores/: __init__.py  base.py  chromadb_adapter.py  chromadb_store.py  chromadb_store_test.py  faiss_adapter.py  faiss_store.py  milvus_adapter.py  milvus_store.py  qdrant_adapter.py  qdrant_store.py  vector_store_manager.py  vectordb_adapter.py  weaviate_adapter.py  weaviate_store.py
tests/: .coveragerc  README.md  conftest.py  conftest_full.py  pytest.ini  run_tests.py  test_application.py  test_data_adapters.py  test_data_ingestion.py  test_main.py  test_rag_pipeline.py  test_retriever.py  test_simple.py  test_vector_store.py
tests/e2e/: test_complete_workflow.py  test_testcontainers.py
tests/encryption/: test_encryption.py  test_simple_crypto.py
tests/integration/: __init__.py  conftest.py  test_chromadb_integration.py  test_embedded_integration.py  test_end_to_end.py  test_qdrant_integration.py  test_real_dependencies.py  test_weaviate_integration.py
