[project]
name = "ohlcv-rag-system"
version = "1.0.0"
description = "RAG system for analyzing OHLCV financial market data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "yfinance>=0.2.36",
    "requests>=2.31.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    "langchain>=0.1.6",
    "langchain-community>=0.0.19",
    "langchain-openai>=0.0.5",
    "openai>=1.12.0",
    "scikit-learn>=1.4.0",
    "ta>=0.11.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.1",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.1",
    "ipython>=8.14.0",
]

[tool.uv.pip]
index-url = "https://pypi.org/simple"